# Lumen

./: LICENSE  README.md
docs/: architecture.md
frontend/data/: com.gamefiltersflatpak.App.desktop  com.gamefiltersflatpak.App.metainfo.xml
frontend/src/: portal.rs  profiles.rs  tray.rs  window.rs
layer/src/: meson.build  shader_sources.hpp
layer/src/effects/builtin/: builtin_effects.cpp  effect_gff.cpp  effect_gff_color.cpp  effect_gff_color.hpp  effect_gff_local.cpp  effect_gff_local.hpp  effect_gff_stylistic.cpp  effect_gff_stylistic.hpp  effect_gff_tonal.cpp  effect_gff_tonal.hpp
layer/src/overlay/: imgui_overlay.cpp  profile_manager.cpp  profile_manager.hpp  view_main.cpp
layer/src/shader/: gff_color.frag.glsl  gff_local.frag.glsl  gff_stylistic.frag.glsl  gff_tonal.frag.glsl  meson.build
scripts/: run.sh
